# bevy-2d-shooter

./: .gitignore  Cargo.toml  README.md  config.toml
assets/: water_shader.wgsl
src/: animation.rs  bullet.rs  camera.rs  collision.rs  config.rs  damage.rs  enemy.rs  game_over.rs  gui.rs  gun.rs  hud.rs  in_game.rs  input.rs  lib.rs  main.rs  main_menu.rs  overlay.rs  physics.rs  player.rs  resource.rs  sprite_order.rs  state.rs
src/ui/: bar.rs  damage_popup.rs  debug_panel.rs  game_over.rs  gui.rs  hud.rs  interpolate.rs  main_menu.rs  mod.rs  pause.rs  player_health_bar.rs  popup.rs  util.rs
src/world/: bullet.rs  collision.rs  damage.rs  despawn.rs  enemy.rs  gun.rs  in_game.rs  map.rs  mod.rs  owner.rs  player.rs  water.rs
