[package]
name = "bevy-2d-shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_dev_tools = "0.15.0"
bevy_pancam = "0.16.0"
kd-tree = "0.6.0"
rand = "0.8.5"
typenum = "1.17.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_button_released_plugin = "0.8.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# this makes debugger go mad
# Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
